# adventOfRust

./: README.md
advent_of_rust/: Cargo.toml
advent_of_rust/src/: _lib.rs  _main.rs  day_eight.rs  day_five.rs  day_four.rs  day_one.rs  day_seven.rs  day_six.rs  day_three.rs  day_two.rs  lib.rs  main.rs
advent_of_rust_js/: next.config.js  package-lock.json  package.json
advent_of_rust_js/src/app/: DayOne.tsx  DaySolver.tsx  DayTwo.tsx  Nav.tsx  Spinner.tsx  daySolver.module.css  globals.css  nav.module.css  page.module.css  page.tsx  page.utils.ts  spinner.module.css
src/: day_one.rs  main.rs
