[package]
name = "advent_of_rust"
version = "0.2.2"
authors = ["Dave Ogle <dogle@scottlogic.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"